--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,36 +1,37 @@
-.load-button {
+.custom-button {
     display: flex;
     align-items: center;
 
+    min-height: 32px !important;
     width: fit-content;
     border-radius: 8px;
     padding: 7px 10px;
     border: none;
 
-    font-weight: 600;
     font-size: 1.1rem;
 
-    color: #1e88e5;
+    color: #0086df;
     background-color: #e3f2fd;
 
     overflow: hidden;
     transition: 0.25s;
 }
 
-.load-button:hover:not(.busy) {
+.custom-button:hover:not(.busy) {
     color: #edf4fa;
     background-color: #83c7f7;
 }
 
-.load-button p {
+.custom-button p {
     position: relative;
-
     left: 7px;
-    padding: 0;
-    margin: 0;
+
+    color: inherit;
+    font-size: 14px;
+    font-weight: 500;
 }
 
-.load-button.busy p {
+.custom-button.busy p {
     position: relative;
 
     left: -3px;
@@ -45,7 +46,7 @@
     transition: 0.25s;
 }
 
-.load-button.busy .spinner {
+.custom-button.busy .spinner {
     right: -2px;
 }
 
