--- a/src/pages/Accountants/Accountants.css
+++ b/src/pages/Accountants/Accountants.css
@@ -1,8 +1,11 @@
 .accountants-page {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 
     height: 100%;
     width: 100%;
+
+    overflow-x: auto;
 }
