--- a/src/components/AccountantCard/AccountantCard.css
+++ b/src/components/AccountantCard/AccountantCard.css
@@ -1,4 +1,5 @@
 .accountant-card {
+    width: 250px;
     padding: 24px;
     border: 1px solid #e4e6e8;
     border-radius: 16px;
@@ -46,7 +47,7 @@
 }
 
 .accountant-card label {
-    color: #54585c;
+    color: #646669;
     width: fit-content;
 }
 
