--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 
 body {
     margin: 0;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    /* -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale; */
 }
 
 code {
@@ -17,4 +17,17 @@ code {
 p {
     padding: 0;
     margin: 0;
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+    background-color: #e3f2fd;
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 30px;
+    background-color: #83c7f7;
 }
