--- a/src/pages/Accountants/Accountants.css
+++ b/src/pages/Accountants/Accountants.css
@@ -1,11 +1,20 @@
 .accountants-page {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
 
     height: 100%;
-    width: 100%;
+
+    margin: 0 auto;
 
     overflow-x: auto;
+}
+
+.accountants-page .accountants-page-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: fit-content;
+
+    padding-bottom: 100px;
 }
