--- a/src/components/SkeletonAccountantCards/SkeletonAccountantCards.css
+++ b/src/components/SkeletonAccountantCards/SkeletonAccountantCards.css
@@ -1,19 +1,20 @@
-.accountants-cards {
+.skeleton-accountants-cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 25px;
+    margin-top: -25px;
 
     margin-bottom: 50px;
 }
 
 @media (max-width: 1300px) {
-    .accountants-cards {
+    .skeleton-accountants-cards {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 630px) {
-    .accountants-cards {
+    .skeleton-accountants-cards {
         grid-template-columns: repeat(1, 1fr);
     }
 }
