added random price, changed page icon and title, open email onClick

--- a/src/components/AccountantCard/AccountantCard.css
+++ b/src/components/AccountantCard/AccountantCard.css
@@ -51,6 +51,11 @@
     width: fit-content;
 }
 
+.accountant-card a {
+    display: block;
+    color: #000;
+}
+
 .accountant-card .custom-button {
     margin-top: 24px;
 }
