--- a/src/pages/Accountants/Accountants.css
+++ b/src/pages/Accountants/Accountants.css
@@ -14,8 +14,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
+    min-height: 75vh;
     height: fit-content;
 
-    padding-bottom: 100px;
+    padding: 50px 0 100px 0;
 }
